example/example.css
@import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900');

html, body {
  margin: 0;
  padding: 0;
}

body {
  background: #41338C;
  font-family: 'Lato', sans-serif;
  font-size: 14px;
}

.box {
  background: #ad2383;
  color: #fff;
  padding: 12px 6px;
  text-align: center;
  border-radius: 3px;
}

.row {
  margin-bottom: 60px;
}

.scrollbar {
  display: inline-block;
  max-height: 150px;
  overflow: auto;
  padding: 0 10px;
}

